[be] tag:user 기능 리팩토링
