# backend/config/routes/userRoute.js
@@ -2,22 +2,22 @@ const app = require("express");
 const router = app.Router();
 const controller = require("../../controller/user/index");
 
-router.get("/friend/:userId", controller.friendList);
-
-router.post("/friend", controller.addFriend);
-
-router.get("/:userId", controller.getUser);
-
-router.get("/", controller.searchUser);
-
-router.get("/friend_req/received/:userId", controller.getReceivedReq);
-
-router.get("/friend_req/sent/:userId", controller.getSentReq);
+router.get("/", controller.searchUsers);
 
 router.put("/", controller.updateProfile);
 
-router.put("/friend_req", controller.rejectRequest);
+router.get("/request/got", controller.getReceivedReq);
 
-router.delete("/friend_req", controller.deleteRequest);
+router.get("/request/sent", controller.getSentReq);
+
+router.put("/request", controller.rejectRequest);
+
+router.delete("/request", controller.deleteRequest);
+
+router.get("/friend", controller.friendList);
+
+router.post("/friend", controller.addFriend);
+
+router.delete("/friend", controller.deleteFriend);
 
 module.exports = router;
