# backend/controller/user/deleteRequest.js
@@ -9,16 +9,10 @@ const defaultModuleInfo = {
 
 /* METHODS */
 function validateInput(body) {
-  const { userId, targetId, ...extra } = body;
+  const { senderId, ...extra } = body;
   const moduleInfo = { ...defaultModuleInfo, method: "validateInput" };
   return new Promise((resolve, reject) => {
-    if (!userId) {
-      reject({
-        status: 400,
-        message: "userId가 설정되지 않았습니다.",
-        ...moduleInfo,
-      });
-    } else if (!targetId) {
+    if (!senderId) {
       reject({
         status: 400,
         message: "targetId가 설정되지 않았습니다.",
@@ -34,10 +28,10 @@ function validateInput(body) {
   });
 }
 
-function validateReq(userId, targetId) {
+function validateReq(senderId, userId) {
   const moduleInfo = { ...defaultModuleInfo, method: "validateReq" };
   return new Promise((resolve, reject) => {
-    userModel.checkInvite(userId, targetId, (err, result) => {
+    userModel.checkInvite(senderId, userId, (err, result) => {
       if (err)
         reject({
           status: 500,
@@ -56,10 +50,10 @@ function validateReq(userId, targetId) {
   });
 }
 
-function deleteReq(userId, targetId) {
+function deleteReq(senderId, userId) {
   const moduleInfo = { ...defaultModuleInfo, method: "deleteReq" };
   return new Promise((resolve, reject) => {
-    userModel.deleteInvite(userId, targetId, (err) => {
+    userModel.deleteInvite(senderId, userId, (err) => {
       if (err)
         reject({
           status: 500,
@@ -74,16 +68,19 @@ function deleteReq(userId, targetId) {
 
 /* EXPORTS */
 module.exports = async function (req, res) {
-  const { userId, targetId } = req.body;
-  logger.info(`[User][deleteRequest]-> ${userId}->${targetId}`);
+  const { userId } = req.user;
+  const { senderId } = req.body;
+  logger.info(`[User][deleteRequest] ${senderId}->${userId}`);
   try {
     await validateInput(req.body);
-    await validateReq(userId, targetId);
-    await deleteReq(userId, targetId);
-    logger.info(`[User][deleteRequest]-> ${userId}->${targetId} DONE!`);
+    await validateReq(senderId, userId);
+    await deleteReq(senderId, userId);
+    logger.info(`[User][deleteRequest] ${senderId}->${userId} DONE`);
     res.end();
   } catch (error) {
     errorHandler(error);
-    res.status(error.status).send(error.message);
+    res
+      .status(error.status || 500)
+      .send(error.message || "Internal Server Error");
   }
 };
